[gd_scene load_steps=6 format=3 uid="uid://qmfhx80ymt3g"]

[ext_resource type="Script" uid="uid://d04k6lbfactvy" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://br11vrwroob48" path="res://Assets/Player/player.jpg" id="2_6t5aa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8j60k"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fo5ed"]
size = Vector2(18, 18)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cvnsp"]
bg_color = Color(0.32477, 0.705123, 1.92523e-07, 1)

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_mask = 28
script = ExtResource("1_cvnsp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8j60k")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_6t5aa")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_fo5ed")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PlayerCamera" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
offset_left = 13.0
offset_top = 15.0
offset_right = 374.0
offset_bottom = 74.0
theme_override_styles/fill = SubResource("StyleBoxFlat_cvnsp")
value = 44.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
